--- a/rc.local.j2
+++ b/rc.local.j2
@@ -17,11 +17,16 @@ if [ "$_IP" ]; then
   printf "My IP address is %s\n" "$_IP"
 fi
 
-sudo rmmod xpad
-sudo xboxdrv --mouse --wid 0 --led 2 --config /home/pi/SPH/controller_1.cnf --silent &
-sleep 1
+# Xbox 360 controller stuff
+#sudo rmmod xpad
+#sudo xboxdrv --mouse --wid 0 --led 2 --config /home/pi/SPH/controller_1.cnf --silent &
+#sleep 1
 #sudo xboxdrv --mouse --wid 1 --led 3 --config /home/pi/SPH/controller_2.cnf --silent &
-sleep 1
+#sleep 1
+
+# PlayStation DualShock 4 Controller
+sudo modprobe uinput
+sudo ds4drv --config /home/pi/.config/ds4drv.conf
 
 sudo rm -f /home/pi/running /home/pi/script_running
 
