--- a/rc.local.j2
+++ b/rc.local.j2
@@ -17,6 +17,11 @@ if [ "$_IP" ]; then
   printf "My IP address is %s\n" "$_IP"
 fi
 
+###############
+# Controllers #
+###############
+# Uncomment one of the following blocks to enable that controller type
+
 # Xbox 360 controller stuff
 #sudo rmmod xpad
 #sudo xboxdrv --mouse --wid 0 --led 2 --config /home/pi/SPH/controller_1.cnf --silent &
@@ -24,9 +29,14 @@ fi
 #sudo xboxdrv --mouse --wid 1 --led 3 --config /home/pi/SPH/controller_2.cnf --silent &
 #sleep 1
 
-# PlayStation DualShock 4 Controller
-sudo modprobe uinput
-sudo ds4drv --config /home/pi/.config/ds4drv.conf
+# MAGIC-NS in Xbox mode
+sudo rmmod xpad
+sudo xboxdrv --mouse --wid 0 --led 2 --config /home/pi/SPH/controller_1.cnf --silent --device-by-id 0079:18d3 --type xbox360 &
+sleep 1
+
+# Experimental - PlayStation DualShock 4 Controller
+#sudo modprobe uinput
+#sudo ds4drv --config /home/pi/.config/ds4drv.conf
 
 sudo rm -f /home/pi/running /home/pi/script_running
 
