--- a/rc.local.j2
+++ b/rc.local.j2
@@ -22,19 +22,19 @@ fi
 ###############
 # Uncomment one of the following blocks to enable that controller type
 
-# Xbox 360 controller stuff
+# Xbox 360 controller via xboxdrv
 #sudo rmmod xpad
 #sudo xboxdrv --mouse --wid 0 --led 2 --config /home/pi/SPH/controller_1.cnf --silent &
 #sleep 1
 #sudo xboxdrv --mouse --wid 1 --led 3 --config /home/pi/SPH/controller_2.cnf --silent &
 #sleep 1
 
-# MAGIC-NS in Xbox mode
+# MAGIC-NS in Xbox mode via xboxdrv
 sudo rmmod xpad
 sudo xboxdrv --mouse --wid 0 --led 2 --config /home/pi/SPH/controller_1.cnf --silent --device-by-id 0079:18d3 --type xbox360 &
 sleep 1
 
-# Experimental - PlayStation DualShock 4 Controller
+# Experimental - PlayStation DualShock 4 Controller direct via ds4drv
 #sudo modprobe uinput
 #sudo ds4drv --config /home/pi/.config/ds4drv.conf
 
